# full-stack-todo-app

./: .gitignore  Dockerfile  README.md  SECURITY_AUDIT.md  docker-compose.yml
.claude/agents/: auth_integration_agent.md  database_schema_agent.md  spec_architect_agent.md
.claude/skills/jwt-token-handler/: README.md  manifest.json  skill.md
.claude/skills/neon-database-operations/: README.md  index.d.ts  index.mts  package.json
.claude/skills/restful-crud-pattern/: README.md  index.d.ts  index.mts  package.json
.specify/memory/: constitution.md
backend/: .gitignore  performance_test.py  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: auth_routes.py  todo_routes.py
backend/src/config/: logging_config.py  security.py
backend/src/database/: database.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: todo.py  user.py
backend/src/services/: auth.py  todo_service.py
backend/src/utils/: jwt.py  validation.py
backend/tests/contract/: test_api_contracts.py
backend/tests/e2e/: test_user_flow.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/: test_auth_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: ProtectedRoute.tsx  TodoForm.tsx  TodoList.tsx
frontend/src/services/: api.ts  auth.ts
frontend/tests/unit/: test_components.js
shared/types/: api.ts
specs/001-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+10 files in other folders)
